Fixed all vehicle report calculation with fuels

--- a/public/app/report/all_vehicle_summary.html
+++ b/public/app/report/all_vehicle_summary.html
@@ -58,7 +58,7 @@
                         </td>
                         <td>{{summary.plate_number}}</td>
                         <td>{{summary.fuel_used}}</td>
-                        <td>RM {{milsummaryeage.fuel_total_cost | number:2}}</td>
+                        <td>RM {{summary.fuel_total_cost | number:2}}</td>
                         <td>{{summary.kl_l | number:3}}Km</td>
                         <td>{{summary.refuel}}</td>
                         <td>{{summary.refuel_cost | number:2}}</td>
