--- a/public/app/dashboard/user_profile.html
+++ b/public/app/dashboard/user_profile.html
@@ -6,27 +6,27 @@
             </div>
             <div class="row">
                 <div class="col l6 s12 input-field">
-                    <input id="new-username" type="text" ng-model="user.response.username">
+                    <input id="new-username" type="text" ng-model="user.userName" disabled>
                     <label for="new-username" class="active">Your username</label>
                 </div>
                 <div class="col l6 s12 input-field">
-                    <input id="new-your-email" type="text" ng-model="user.response.email">
+                    <input id="new-your-email" type="text" ng-model="user.email" disabled>
                     <label for="new-your-email" class="active">Your email address</label>
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col l6 s12 input-field">
-                    <input id="new-your-role" type="text" ng-model="user.response.role[0]">
+                    <input id="new-your-role" type="text" ng-model="user.">
                     <label for="new-your-role" class="active">Your role</label>
                 </div>
                 <div class="col l6 s12 input-field">
                     <input id="note" type="password" ng-model="vm.user.note">
                     <label for="note" class="active">Note</label>
                 </div>
-            </div>
-            <div class="row center">
+            </div>-->
+            <!--<div class="row center">
                 <button class="btn" ng-click="vm.profile_update()">Update</button>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
