--- a/public/app/admin/vehicles.html
+++ b/public/app/admin/vehicles.html
@@ -63,6 +63,7 @@
                                 <th data-field="image">Driver Name</th>
                                 <th data-field="">Edit Vehicle</th>
                                 <th data-field="">Change Group</th>
+                                <th data-field="">Update Fuel</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -85,6 +86,11 @@
                                 <td>
                                     <a class="btn z-depth-0 blue lighten-1" ng-click="vm.car_group(car.data[0])">
                                         <i class="fa fa-object-group"></i>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a class="btn z-depth-0 blue lighten-1" ng-click="vm.user_view_modal(user)">
+                                        <i class="fa fa-battery-full"></i>
                                     </a>
                                 </td>
                             </tr>                    
