--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <body ng-app="app" ng-controller="NavigationController as vm"  ng-cloak>
         <ul id="user_setting" class="dropdown-content">
             <li><a href="#profile" ng-click="vm.open_modal('profile')">Profile</a></li>
-            <li><a href="#password" ng-click="vm.open_modal('password')">Password</a></li>
-            <li><a href="" >View</a></li>
+            <!--<li><a href="#password" ng-click="vm.open_modal('password')">Password</a></li>
+            <li><a href="" >View</a></li>-->
         </ul>
         <ul id="dropdown" class="dropdown-content collection dropdown-notification" ng-show="notification.length">
             <li class="collection-item avatar row" style="padding-left: 20px; margin: 0;" ng-repeat="noti in notification"  ng-click="vm.open_notification(noti, $index)">
