--- a/public/app/report/variation.html
+++ b/public/app/report/variation.html
@@ -57,7 +57,9 @@
                 <tbody>
                     <tr dir-paginate="variation in vm.variation_full.data | itemsPerPage: vm.per_page">
                         <td>{{variation.gpsTime | date : 'medium'}}</td>
-                        <td>{{variation.refuel}}</td>
+                        <td ng-if="variation.refuel && variation.fuel_cal">{{variation.refuel*variation.fuel_cal | number: 2}}</td>
+                        <td ng-if="variation.refuel && !variation.fuel_cal">{{variation.refuel}}</td>
+                        <td ng-if="!variation.refuel">0.00</td>
                         <td>0</td>
                         <td>{{variation.address}}</td>
                     </tr>
