Fixed bugs in fuel management integration to all vehicle summary

--- a/public/app/report/all_vehicle_summary.html
+++ b/public/app/report/all_vehicle_summary.html
@@ -39,13 +39,13 @@
                     <tr>
                         <td bgcolor='#51BAF7'>Username</td>
                         <td bgcolor='#51BAF7'>Plate No</td>
-                        <td bgcolor='#51BAF7'>Fuel</td>
+                        <td bgcolor='#51BAF7'>Fuel (L)</td>
                         <td bgcolor='#51BAF7'>Fuel Cost</td>
                         <td bgcolor='#51BAF7'>KM - L</td>
-                        <td bgcolor='#51BAF7'>Refuel</td>
+                        <td bgcolor='#51BAF7'>Refuel (L)</td>
                         <td bgcolor='#51BAF7'>Refuel Cost</td>
                         <td bgcolor='#51BAF7'>Idling Time</td>
-                        <td bgcolor='#51BAF7'>Idling Fuel</td>
+                        <td bgcolor='#51BAF7'>Idling Fuel (L)</td>
                         <td bgcolor='#51BAF7'>Total Idling Cost</td>
                         <td bgcolor='#51BAF7'>Travelling Time</td>
                     </tr>
