CDN materialize css

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta  http-equiv="content-type" content="text/html;" charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css"></link>
+        <!--<link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css"></link>-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link rel="stylesheet" href="/libs/components-font-awesome/css/font-awesome.min.css"></link>
         <link rel="stylesheet" href="/libs/angular-chart.js/dist/angular-chart.min.css"></link>
         <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css"></link>
@@ -59,7 +60,7 @@
         <script src="libs/angular-resource/angular-resource.min.js"></script>
         <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="libs/jquery/dist/jquery.min.js"></script>
-        <script src="libs/materialize/dist/js/materialize.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
         <script src="https://rawgithub.com/eligrey/FileSaver.js/master/FileSaver.js" type="text/javascript"></script>
         <script src="libs/angularUtils-pagination/dirPagination.js" type="text/javascript"></script>
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
