--- a/public/app/report/fuel_consumption.html
+++ b/public/app/report/fuel_consumption.html
@@ -52,8 +52,9 @@
             <b ng-if="!vm.fuel_data_full.total_mileage">0</b>
         </p>
         <p class="col s12 m12 l4">Total Consumption: 
-            <b ng-if="vm.fuel_data_full.fuel_consumption">{{vm.fuel_data_full.fuel_consumption*vm.fuel_data_full.fuel_cal}}</b>
-            <b ng-if="!vm.fuel_data_full.fuel_consumption">0</b>
+            <b ng-if="vm.fuel_data_full.fuel_consumption && vm.fuel_data_full.fuel_cal">{{vm.fuel_data_full.fuel_consumption*vm.fuel_data_full.fuel_cal |number:2}}</b>
+            <b ng-if="vm.fuel_data_full.fuel_consumption && !vm.fuel_data_full.fuel_ca">{{vm.fuel_data_full.fuel_consumption | number:2}}</b>
+            <b ng-if="!vm.fuel_data_full.fuel_consumption && !vm.fuel_data_full.fuel_ca">0.00</b>
         </p>
         <!--<p class="col s12 m12 l3">Average fuel consumption(L/100Km): 
             <b ng-if="vm.fuel_data_full.fuel_consumption">{{vm.fuel_data_full.fuel_consumption*vm.fuel_data_full.fuel_cal / 100}}</b>
